--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "framer-motion": "^7.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "5.3.3",
+    "react-router-dom": "^6.4.1",
     "uuid": "^9.0.0",
     "zustand": "^4.1.1"
   },
